--- a/CreationalDesignPattern/Readme
+++ b/CreationalDesignPattern/Readme
@@ -1,1 +1,7 @@
 
+Imagine that you’re creating a logistics management application. The first version of your app can only handle transportation by trucks, so the bulk of your code lives inside the Truck class.
+
+After a while, your app becomes pretty popular. Each day you receive dozens of requests from sea transportation companies to incorporate sea logistics into the app.
+ At present, most of your code is coupled to the Truck class. Adding Ships into the app would require making changes to the entire codebase. Moreover, if later you decide to add another type of transportation to the app, you will probably need to make all of these changes again.
+
+Suggest and implement a proper design pattern and convert the scenario in code
